--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -7,7 +7,7 @@
         <h2>Shoppie - Checkout</h2>
         <h3>Review your Cart</h3>
         <hr>
-        <h4 id="noitem">hello</h4>
+        <h4 id="noitem"></h4>
         <div class="my-4">
             <ul class="list-group" id="items">
 
